# fin-beachvolley

./: .gitignore  LICENSE  README.md  parse.py  pyproject.toml  requirements-dev.txt  test.sh  test_parse.py
testdata/: page.html
